closer i am to fine

--- a/sunclock1/app/src/main/cpp/CMakeLists.txt
+++ b/sunclock1/app/src/main/cpp/CMakeLists.txt
@@ -31,6 +31,8 @@ add_library( # Sets the name of the library.
         dynamical_time.c      mercury.c            rise_set.c
         earth.c               neptune.c            saturn.c
         elliptic_motion.c     nutation.c           sidereal_time.c
+
+        clock.c draw.c
         )
 
 # Searches for a specified prebuilt library and stores the path as a
