--- a/sunclock1/app/build.gradle
+++ b/sunclock1/app/build.gradle
@@ -7,11 +7,11 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.wozniakconsulting.sunclock1"
+        applicationId "com.gorillasapiens.sunclock1"
         minSdk 26
         targetSdk 31
-        versionCode 1
-        versionName "0.0"
+        versionCode 2
+        versionName "0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
