--- a/earth/Makefile
+++ b/earth/Makefile
@@ -5,9 +5,13 @@ all:
 	gcc spin.c -lm
 	./a.out 0 0 0 > zero.raw
 	convert -size 256x256 -depth 8 RGB:zero.raw -scale 1024x1024 zero.png
-	./a.out 1 0 0 > pitch.raw
-	convert -size 256x256 -depth 8 RGB:pitch.raw -scale 1024x1024 pitch.png
-	./a.out 0 1 0 > roll.raw
-	convert -size 256x256 -depth 8 RGB:roll.raw -scale 1024x1024 roll.png
-	./a.out 0 0 1 > yaw.raw
-	convert -size 256x256 -depth 8 RGB:yaw.raw -scale 1024x1024 yaw.png
+	./a.out 90 0 0 > x.raw
+	convert -size 256x256 -depth 8 RGB:x.raw -scale 1024x1024 x.png
+	./a.out 0 45 0 > y.raw
+	convert -size 256x256 -depth 8 RGB:y.raw -scale 1024x1024 y.png
+	./a.out 0 0 90 > z.raw
+	convert -size 256x256 -depth 8 RGB:z.raw -scale 1024x1024 z.png
+	./a.out -58 -34 0 > buenos.raw
+	convert -size 256x256 -depth 8 RGB:buenos.raw -scale 1024x1024 buenos.png
+	./a.out -81 34 0 > columbia.raw
+	convert -size 256x256 -depth 8 RGB:columbia.raw -scale 1024x1024 columbia.png
