fixed white in xpm

--- a/earth/Makefile
+++ b/earth/Makefile
@@ -1,5 +1,6 @@
 all:
 	convert world.png world.xpm
+	sed -i "s/c white/c #FFFFFF/g" world.xpm
 	gcc precompute.c -lm -o b.out
 	./b.out > precomputed.h
 	echo "{0,0}" >> precomputed.h
