--- a/sunclock1/app/build.gradle
+++ b/sunclock1/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.gorillasapiens.sunclock1"
         minSdk 26
         targetSdk 31
-        versionCode 5
-        versionName "0.5"
+        versionCode 6
+        versionName "0.6"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
@@ -53,5 +53,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+//    implementation('net.iakovlev:timeshape:2021c.13') {
+//       // Exclude standard compression library
+//       exclude group: 'com.github.luben', module: 'zstd-jni'
+//    }
+//    // Import aar for native component compilation
+//    implementation 'com.github.luben:zstd-jni:1.5.2-3@aar'
 }
 
