--- a/sunclock1/app/build.gradle
+++ b/sunclock1/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+
     implementation('net.iakovlev:timeshape:2021c.13') {
        // Exclude standard compression library
        exclude group: 'com.github.luben', module: 'zstd-jni'
