--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -34,10 +34,10 @@ icons:
 	rm -rf weather-underground-icons
 
 calcdata: main.c draw.c clock.c libnova.a
-	gcc -g -Ofast -Wall -DSTANDALONE draw.c clock.c main.c libnova.a -I libnova-0.15.0/src -lm -o calcdata
+	gcc -g -Wall -DSTANDALONE draw.c clock.c main.c libnova.a -I libnova-0.15.0/src -lm -o calcdata
 
 calcrange: mainrange.c draw.c clock.c libnova.a
-	gcc -g -Ofast -Wall -DSTANDALONE draw.c clock.c mainrange.c libnova.a -I libnova-0.15.0/src -lm -o calcrange
+	gcc -g -Wall -DSTANDALONE draw.c clock.c mainrange.c libnova.a -I libnova-0.15.0/src -lm -o calcrange
 
 libnova-0.15.0/doc/html:
 	(cd libnova-0.15.0/doc; doxygen doxyfile.in )
