makefile cleanup, cache improvements

--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -14,9 +14,9 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-all: fonts/.bdf calcdata calcrange libnova-0.15.0/doc/html doxygen
+all: fonts/.bdf calcdata calcrange libnova-0.15.0/doc/html html/index.html
 
-doxygen:
+html/index.html: doxygen.conf clock.c draw.c
 	doxygen doxygen.conf
 
 indent:
@@ -42,12 +42,13 @@ calcrange: mainrange.c draw.c clock.c libnova.a
 libnova-0.15.0/doc/html:
 	(cd libnova-0.15.0/doc; doxygen doxyfile.in )
 
-libnova.a: libnova-0.15.0
+libnova.a: libnova-0.15.0/Makefile.am
 	(cd libnova-0.15.0/src; gcc -Ofast -c *.c -I.)
 	ar r libnova.a libnova-0.15.0/src/*.o
 
-libnova-0.15.0: libnova-0.15.0.tar.gz
+libnova-0.15.0/Makefile.am: libnova-0.15.0.tar.gz
 	tar -xzvf libnova-0.15.0.tar.gz
+	touch libnova-0.15.0/Makefile.am
 
 libnova-0.15.0.tar.gz:
 	wget https://sourceforge.net/projects/libnova/files/libnova/v%200.15.0/libnova-0.15.0.tar.gz/download -O libnova-0.15.0.tar.gz
