--- a/sunclock1/app/src/main/AndroidManifest.xml
+++ b/sunclock1/app/src/main/AndroidManifest.xml
@@ -8,23 +8,26 @@
 
     <application
         android:allowBackup="true"
-        android:largeHeap="true"
         android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sunclock1"
         tools:ignore="HardcodedDebugMode">
         <activity
-            android:name="com.gorillasapiens.sunclock1.SettingsActivity"
-            android:label="@string/title_activity_settings">
-        </activity>
+            android:name=".AlarmActivity"
+            android:exported="false" />
         <activity
-            android:name="com.gorillasapiens.sunclock1.MainActivity"
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
