--- a/globe/Makefile
+++ b/globe/Makefile
@@ -1,11 +1,11 @@
 all:
 	./grid.pl
 	convert -colorspace RGB -depth 8 outlines.png -morphology erode disk:5 -channel RGB -negate thickoutlines.png
-	composite thickoutlines.png grid.png  world2.png
-	composite world2.png world_top_bathy_bigger.png world.png
-	convert world.png world.xpm
-	./bitmapish.pl < world.xpm > world.h
-	gcc -g world.c -lm
+	composite thickoutlines.png grid.png  globe2.png
+	composite globe2.png globe_top_bathy_bigger.png globe.png
+	convert globe.png globe.xpm
+	./bitmapish.pl < globe.xpm > globei.h
+	gcc -g globe.c -lm
 	./a.out 512 0 0 0 > zero.raw
 	convert -size 512x512 -depth 8 RGB:zero.raw -scale 1024x1024 zero.png
 	./a.out 512 90 0 0 > x.raw
@@ -20,15 +20,26 @@ all:
 	convert -size 512x512 -depth 8 RGB:columbia.raw -scale 1024x1024 columbia.png
 
 small:
-	convert world_top_bathy_bigger.png world.xpm
-	./bitmapish.pl < world.xpm > world.h
-	gcc -g world.c -lm
+	convert globe_top_bathy_bigger.png globe.xpm
+	./bitmapish.pl < globe.xpm > globe.h
+	gcc -g globe.c -lm
 	./a.out 64 34 -81 0 > csmall.raw
 	convert -size 64x64 -depth 8 RGB:csmall.raw csmall.png
 
 moon:
 	convert moon.tif -scale 2560x1280\! moon.xpm
-	./bitmapish.pl < moon.xpm > world.h
-	gcc -g world.c -lm
+	./bitmapish.pl < moon.xpm > globe.h
+	gcc -g globe.c -lm
 	./a.out 512 0 0 0 > moon.raw
 	convert -size 512x512 -depth 8 RGB:moon.raw -scale 1024x1024 moon.png
+
+clean:
+	rm -f a.out
+	rm -f buenos.png buenos.raw
+	rm -f columbia.png columbia.raw
+	rm -f globe.png globe.xpm globe2.png grid.png thickoutlines.png
+	rm -f x.png x.raw
+	rm -f y.png y.raw
+	rm -f z.png z.raw
+	rm -f zero.png zero.raw
+
