cleanup in globe

--- a/globe/Makefile
+++ b/globe/Makefile
@@ -5,33 +5,35 @@ all:
 	composite globe2.png globe_top_bathy_bigger.png globe.png
 	convert globe.png globe.xpm
 	./bitmapish.pl < globe.xpm > globei.h
-	gcc -g globe.c -lm
+	gcc -g -DSTANDALONE -I../maths -I../standalone ../maths/trig1.c ../standalone/draw.c globe.c -lm
 	./a.out 512 0 0 0 > zero.raw
-	convert -size 512x512 -depth 8 RGB:zero.raw -scale 1024x1024 zero.png
+	convert -size 512x512 -depth 8 RGBA:zero.raw -scale 1024x1024 zero.png
 	./a.out 512 90 0 0 > x.raw
-	convert -size 512x512 -depth 8 RGB:x.raw -scale 1024x1024 x.png
+	convert -size 512x512 -depth 8 RGBA:x.raw -scale 1024x1024 x.png
 	./a.out 512 0 90 0 > y.raw
-	convert -size 512x512 -depth 8 RGB:y.raw -scale 1024x1024 y.png
+	convert -size 512x512 -depth 8 RGBA:y.raw -scale 1024x1024 y.png
 	./a.out 512 0 0 90 > z.raw
-	convert -size 512x512 -depth 8 RGB:z.raw -scale 1024x1024 z.png
+	convert -size 512x512 -depth 8 RGBA:z.raw -scale 1024x1024 z.png
 	./a.out 512 -34 -58 0 > buenos.raw
-	convert -size 512x512 -depth 8 RGB:buenos.raw -scale 1024x1024 buenos.png
+	convert -size 512x512 -depth 8 RGBA:buenos.raw -scale 1024x1024 buenos.png
 	./a.out 512 34 -81 0 > columbia.raw
-	convert -size 512x512 -depth 8 RGB:columbia.raw -scale 1024x1024 columbia.png
+	convert -size 512x512 -depth 8 RGBA:columbia.raw -scale 1024x1024 columbia.png
 
-small:
-	convert globe_top_bathy_bigger.png globe.xpm
-	./bitmapish.pl < globe.xpm > globe.h
-	gcc -g globe.c -lm
-	./a.out 64 34 -81 0 > csmall.raw
-	convert -size 64x64 -depth 8 RGB:csmall.raw csmall.png
+# broken, maybe can fix some day
+# small:
+# 	convert globe_top_bathy_bigger.png globe.xpm
+# 	./bitmapish.pl < globe.xpm > globe.h
+# 	gcc -g globe.c -lm
+# 	./a.out 64 34 -81 0 > csmall.raw
+# 	convert -size 64x64 -depth 8 RGB:csmall.raw csmall.png
 
-moon:
-	convert moon.tif -scale 2560x1280\! moon.xpm
-	./bitmapish.pl < moon.xpm > globe.h
-	gcc -g globe.c -lm
-	./a.out 512 0 0 0 > moon.raw
-	convert -size 512x512 -depth 8 RGB:moon.raw -scale 1024x1024 moon.png
+# broken, maybe can fix some day
+# moon:
+# 	convert moon.tif -scale 2560x1280\! moon.xpm
+# 	./bitmapish.pl < moon.xpm > globe.h
+# 	gcc -g globe.c -lm
+# 	./a.out 512 0 0 0 > moon.raw
+# 	convert -size 512x512 -depth 8 RGB:moon.raw -scale 1024x1024 moon.png
 
 clean:
 	rm -f a.out
