--- a/standalone/fonts/Makefile
+++ b/standalone/fonts/Makefile
@@ -33,8 +33,12 @@ dejavu-fonts-ttf-2.37.tar.bz2:
 	tar -xjvf deja*.tar.bz2
 	-otf2bdf -p 8 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_8.bdf
 	-otf2bdf -p 10 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_10.bdf
+	-otf2bdf -p 12 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_12.bdf
+	-otf2bdf -p 14 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_14.bdf
 	-otf2bdf -p 16 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_16.bdf
+	-otf2bdf -p 18 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_18.bdf
 	-otf2bdf -p 20 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_20.bdf
+	-otf2bdf -p 22 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_22.bdf
 	-otf2bdf -p 24 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_24.bdf
 	-otf2bdf -p 32 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_32.bdf
 	-otf2bdf -p 40 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_40.bdf
@@ -42,8 +46,12 @@ dejavu-fonts-ttf-2.37.tar.bz2:
 	-otf2bdf -p 60 dejavu*/ttf/DejaVuSansMono-Bold.ttf -o djsmb_60.bdf
 	-otf2bdf -p 8 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_8.bdf
 	-otf2bdf -p 10 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_10.bdf
+	-otf2bdf -p 12 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_12.bdf
+	-otf2bdf -p 14 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_14.bdf
 	-otf2bdf -p 16 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_16.bdf
+	-otf2bdf -p 18 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_18.bdf
 	-otf2bdf -p 20 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_20.bdf
+	-otf2bdf -p 22 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_22.bdf
 	-otf2bdf -p 24 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_24.bdf
 	-otf2bdf -p 32 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_32.bdf
 	-otf2bdf -p 40 dejavu*/ttf/DejaVuSansMono-Oblique.ttf -o djsmo_40.bdf
@@ -67,9 +75,9 @@ dejavu-fonts-ttf-2.37.tar.bz2:
 	unzip astrodotbasic.zip
 	-otf2bdf -p 16 AstroDotBasic.ttf -o astro_16.bdf
 	-otf2bdf -p 20 AstroDotBasic.ttf -o astro_20.bdf
+	-otf2bdf -p 24 AstroDotBasic.ttf -o astro_24.bdf
 	-otf2bdf -p 32 AstroDotBasic.ttf -o astro_32.bdf
 	-otf2bdf -p 50 AstroDotBasic.ttf -o astro_50.bdf
-	-otf2bdf -p 24 AstroDotBasic.ttf -o astro_24.bdf
 	touch .part_c
 
 .part_d:
