sync up with recent changes

--- a/sunclock1/app/src/main/cpp/CMakeLists.txt
+++ b/sunclock1/app/src/main/cpp/CMakeLists.txt
@@ -23,7 +23,7 @@ add_library( # Sets the name of the library.
 
              # Provides a relative path to your source file(s).
 
-		../../../../../standalone/precise.c
+		../../../../../maths/precise.c
 		../../../../../maths/astro.c
 		../../../../../globe/globe.c
         	../../../../../standalone/clock.c
