--- a/sunclock1/app/src/main/AndroidManifest.xml
+++ b/sunclock1/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity
+            android:screenOrientation="fullSensor"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
